fixed spacing issue

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,6 @@
 /* Base styles - Tailwind is imported in globals.css */
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+box-sizing: border-box;
 
 html,
 body {
